--- a/src/components/Navbar/Dropdown/Dropdown.css
+++ b/src/components/Navbar/Dropdown/Dropdown.css
@@ -1,47 +1,47 @@
 .dropdown {
-	position: relative;
-	display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content {
-	display: none;
-	border-radius: 0.5rem;
-	position: absolute;
-	background-color: #343a40;
-	min-width: 150px;
-	z-index: 1;
+  display: none;
+  border-radius: 0.5rem;
+  position: absolute;
+  background-color: #292e33;
+  min-width: 150px;
+  z-index: 1;
 }
 
 .dropdown-content a {
-	color: #fff;
-	padding: 10px 20px;
-	text-decoration: none;
-	display: block;
-	font-size: 0.87rem;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: block;
+  font-size: 0.87rem;
 }
 
 .dropdown-content a:hover {
-	border-radius: 0.27rem;
-	background-color: #292e33;
-	color: #fff;
+  border-radius: 0.27rem;
+  background-color: #343a40;
+  color: #ffc107;
 }
 
 .dropdown:hover .dropdown-content {
-	display: block;
-	top: 2.1rem;
-	left: 0.9rem;
+  display: block;
+  top: 2.6rem;
+  left: -1.2rem;
 }
 
 @media screen and (max-width: 400px) {
-	.dropdown-content {
-		min-width: 150px;
-		border-radius: 0.3rem;
-	}
+  .dropdown-content {
+    min-width: 150px;
+    border-radius: 0.3rem;
+  }
 }
 @media screen and (max-width: 400px) {
-	.dropdown-content a {
-		font-size: 0.8rem;
-		border-radius: 0.1rem;
-		font-weight: 300;
-	}
+  .dropdown-content a {
+    font-size: 0.8rem;
+    border-radius: 0.1rem;
+    font-weight: 300;
+  }
 }
